# mycelia

./: .gitignore  Cargo.toml  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 488217b7qbvmbjidy8854pwdz4l8ziza-source  c39q7pww80997lz0fyqxpvsr29q6f7ld-source  j6qcm7gq2vbw1g59fhl6mj49q0mci7ar-source
shaders/: bitonic_merge.comp  edges.comp  graph.comp  lookup_index.comp  physics.comp  physics_edges.comp  spatial.comp
src/: barnes_hut.rs  barnes_hut_no_stack.rs  database.rs  gpu_physics.rs  graph.rs  main.rs  octree.rs  octree_list.rs  renderer.rs  world.rs
