[package]
name = "mindspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
cen = { git = "https://github.com/angelocarly/cen", rev = "374c9a4ee7ccc35e72ebf33e4ce03b7afc91f64d" }
neo4rs = "0.9.0-rc.3"