[package]
name = "mycelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
cen = { path = "../cen" }
ash = "0.38.0+1.3.281"
bytemuck = "1.21.0"
egui = "0.30.0"
egui_extras = "0.30.0"
neo4rs = "0.9.0-rc.3"
gpu-allocator = "0.27.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
ordered-float = "4.6.0"
rand = "0.8.5"