[package]
name = "mycelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
cen = { git = "https://github.com/n-e-l/cen.git", rev = "0e2aaebf2ff5b919eb653e72866a175d1476a0f4" }
ash = "0.38.0+1.3.281"
bytemuck = "1.21.0"
egui = "0.32.0"
gpu-allocator = "0.27.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
ordered-float = "4.6.0"
rand = "0.8.5"
slotmap = "1.0.7"
petgraph = "0.7.1"
rayon = "1.10.0"
log = "0.4.25"